# Obj-Dectector-Rs

./: .gitignore  .gitmodules  CamConfig.toml  Cargo.toml  LICENSE  bacon.toml  shell.nix
src/: lib.rs  main.rs
src/camera/: cam.rs  cam_cfg.rs  cam_dection.rs  cam_handler.rs  camera.rs  camera_builder.rs  camera_op.rs  camera_operator.rs  mod.rs
src/camera/cam_utils/: mod.rs  simd_helper.rs
src/common/: camera_config.rs  config.rs  labels.rs  mod.rs  support.rs
src/interpreter/: interpret_trait.rs  mod.rs  pixel_conversion.rs  support.rs  tensor_adapter.rs  tensor_predictor.rs
src/messaging/: message_distributor.rs  mod.rs
src/profilers/: hist.rs  mod.rs  plot.rs  profile_structs.rs
src/profilers/profiler_types/: hrt.rs  mod.rs
src/receiver/: image_receiver.rs  image_receiver_builder.rs  mod.rs  video_displayer.rs
src/sync/: mod.rs  syncronizer.rs
test/: CamTestConfig.toml  camera_config.rs  inference_test.rs  profiler_test.rs  test_camera_builder.rs  test_histogram.rs
