[package]
name = "camera_merger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
config = "0.15.13"
opencv = "0.95.1"
tract-onnx = "0.21.13"
serde = { version = "1.0.219", features = ["derive"] }
rayon = "1.11.0"
onnxruntime = "0.0.14"
once_cell = "1.21.3"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
serde_yaml = "0.9.34"
plotpy = "1.14.0"
# packed_simd = "0.3.9"


[[test]]
name = "sh_test"
path = "test/profiler_test.rs"

# [[test]]
# name = "cam_test"
# path = "test/camera_config.rs"
#
